This update is the first incremental check-in for DURACLOUD-615. It adds the 'ldap' project and a new UserDetailsServiceLdapImpl. Although no functionality changes with this update, it is the first step towards swapping out the in-memory authN/Z UserDetailsService with one based on LDAP. Most of the new classes here were directly pulled over from the Management Console project. A natural and necessary future step will be to factor these classes out of the MC project.
git-svn-id: https://svn.duraspace.org/duracloud/branches/duracloud-615@1048 1005ed41-97cd-4a8f-848c-be5b5fe45bcb

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -75,6 +75,12 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>com.springsource.org.apache.commons.lang</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
     <dependency>  
       <groupId>com.thoughtworks.xstream</groupId>  
       <artifactId>com.springsource.com.thoughtworks.xstream</artifactId>
