--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
         <module>storageprovider</module>
         <module>unit-test-db</module>
         <module>storeclient</module>
+        <module>ldap</module>
         <module>security</module>
         <module>computeprovider</module>
         <module>ec2typicacomputeprovider</module>
@@ -587,6 +588,82 @@
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-core-tiger</artifactId>
                 <version>2.0.4</version>
+            </dependency>
+
+            <dependency>
+              <groupId>org.springframework.ldap</groupId>
+              <artifactId>spring-ldap-core</artifactId>
+              <version>1.3.1.RELEASE</version>
+              <exclusions>
+                <exclusion>
+                  <groupId>log4j</groupId>
+                  <artifactId>log4j</artifactId>
+                </exclusion>
+                <exclusion>
+                  <groupId>commons-logging</groupId>
+                  <artifactId>commons-logging</artifactId>
+                </exclusion>
+              </exclusions>
+            </dependency>
+            <dependency>
+              <groupId>org.springframework.ldap</groupId>
+              <artifactId>spring-ldap-core-tiger</artifactId>
+              <version>1.3.1.RELEASE</version>
+              <exclusions>
+                <exclusion>
+                  <groupId>log4j</groupId>
+                  <artifactId>log4j</artifactId>
+                </exclusion>
+                <exclusion>
+                  <groupId>commons-logging</groupId>
+                  <artifactId>commons-logging</artifactId>
+                </exclusion>
+              </exclusions>
+            </dependency>
+            <dependency>
+              <groupId>org.springframework.ldap</groupId>
+              <artifactId>spring-ldap-odm</artifactId>
+              <version>1.3.1.RELEASE</version>
+              <exclusions>
+                <exclusion>
+                  <groupId>log4j</groupId>
+                  <artifactId>log4j</artifactId>
+                </exclusion>
+                <exclusion>
+                  <groupId>commons-logging</groupId>
+                  <artifactId>commons-logging</artifactId>
+                </exclusion>
+              </exclusions>
+            </dependency>
+            <dependency>
+              <groupId>org.springframework.ldap</groupId>
+              <artifactId>spring-ldap-ldif-core</artifactId>
+              <version>1.3.1.RELEASE</version>
+              <exclusions>
+                <exclusion>
+                  <groupId>log4j</groupId>
+                  <artifactId>log4j</artifactId>
+                </exclusion>
+                <exclusion>
+                  <groupId>commons-logging</groupId>
+                  <artifactId>commons-logging</artifactId>
+                </exclusion>
+              </exclusions>
+            </dependency>
+            <dependency>
+              <groupId>org.springframework.ldap</groupId>
+              <artifactId>spring-ldap-ldif-batch</artifactId>
+              <version>1.3.1.RELEASE</version>
+              <exclusions>
+                <exclusion>
+                  <groupId>log4j</groupId>
+                  <artifactId>log4j</artifactId>
+                </exclusion>
+                <exclusion>
+                  <groupId>commons-logging</groupId>
+                  <artifactId>commons-logging</artifactId>
+                </exclusion>
+              </exclusions>
             </dependency>
 
             <dependency>
