--- a/security/pom.xml
+++ b/security/pom.xml
@@ -50,6 +50,11 @@
       <version>${project.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.duracloud</groupId>
+      <artifactId>ldap</artifactId>
+      <version>${project.version}</version>
+    </dependency>
     
     <dependency>
       <groupId>org.springframework.security</groupId>
