This update is another incremental addition to DURACLOUD-615. It swaps out the existing in-memory UserDetailsService with one that connects to LDAP. As a result, the app-config initialization configuration is also updated to include LDAP connection details, now, instead of the previous user details.
git-svn-id: https://svn.duraspace.org/duracloud/branches/duracloud-615@1049 1005ed41-97cd-4a8f-848c-be5b5fe45bcb

--- a/app-config/src/main/resources/init.properties
+++ b/app-config/src/main/resources/init.properties
@@ -81,27 +81,11 @@ duraboss.auditor.enabled=true
 ###
 # defines new users
 ###
-security.user.0.username=[username-0]
-security.user.0.password=[password-0]
-security.user.0.email=[user0@email.com]
-security.user.0.enabled=true
-security.user.0.acct-non-expired=true
-security.user.0.cred-non-expired=true
-security.user.0.acct-non-locked=true
-security.user.0.grants.0=ROLE_USER
-security.user.0.grants.1=[role-1]
-security.user.0.grants.2=[role-2]
-security.user.0.groups.0=[group-0]
-security.user.0.groups.1=[group-1]
-
-security.user.1.username=[username-1]
-security.user.1.password=[password-1]
-security.user.1.email=[user1@email.com]
-security.user.1.enabled=true
-security.user.1.acct-non-expired=true
-security.user.1.cred-non-expired=true
-security.user.1.acct-non-locked=true
-security.user.1.grants.0=ROLE_USER
-security.user.1.grants.1=ROLE_ADMIN
-security.user.1.groups.0=[group-0]
+security.acct-id.0=[duracloud-acct-id-0]
+security.acct-id.1=[duracloud-acct-id-1]
+security.acct-id.n=[duracloud-acct-id-n]
+security.ldap.basedn=[ldap-basedn]
+security.ldap.userdn=[ldap-userdn]
+security.ldap.password=[ldap-password]
+security.ldap.url=[ldap-url]
 
