--- a/ldap/pom.xml
+++ b/ldap/pom.xml
@@ -135,5 +135,11 @@
       <artifactId>commons-lang</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>com.springsource.org.apache.commons.httpclient</artifactId>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 </project>
