This update is another incremental addition to DURACLOUD-615. It adds the app-config updates necessary to initialize the respective webapp security with config details for connecting to a remote identifier generator. Additionally, the update ensures that an institutional group is created during auto-provisioning.
git-svn-id: https://svn.duraspace.org/duracloud/branches/duracloud-615@1083 1005ed41-97cd-4a8f-848c-be5b5fe45bcb

--- a/app-config/src/main/resources/init.properties
+++ b/app-config/src/main/resources/init.properties
@@ -88,4 +88,7 @@ security.ldap.basedn=[ldap-basedn]
 security.ldap.userdn=[ldap-userdn]
 security.ldap.password=[ldap-password]
 security.ldap.url=[ldap-url]
+security.idutil.host=[idutil-host]
+security.idutil.port=[idutil-port]
+security.idutil.ctxt=[idutil-context]
 
