--- a/synctoolui/pom.xml
+++ b/synctoolui/pom.xml
@@ -602,6 +602,7 @@
                   <goal>single</goal>
                 </goals>
                 <configuration>
+                  <appendAssemblyId>true</appendAssemblyId>
                   <descriptors>
                     <descriptor>src/main/install/osx-installer-zip.xml</descriptor>
                   </descriptors>
