Part of https://jira.duraspace.org/browse/DURACLOUD-1039. A few classes are moved to DuraCloud-DB to allow for removing any dependencies from DuraCloud-DB to DuraCloud. This change also moves the classes in securitycache back into security (they were only moved there to resolve a circular dependency which is resolved by this work) and remove that project. Adds dependencies to duracloud-db to pick up the moved classes.

--- a/duradmin/pom.xml
+++ b/duradmin/pom.xml
@@ -190,12 +190,6 @@
 
     <dependency>
       <groupId>org.duracloud</groupId>
-      <artifactId>securitycache</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.duracloud</groupId>
       <artifactId>storeclient</artifactId>
       <version>${project.version}</version>
     </dependency>
@@ -238,6 +232,11 @@
     <dependency>
       <groupId>org.duracloud.db</groupId>
       <artifactId>mill-db-repo</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.duracloud.db</groupId>
+      <artifactId>account-management-db-model</artifactId>
     </dependency>
 
     <dependency>
