--- a/reportdata/pom.xml
+++ b/reportdata/pom.xml
@@ -51,6 +51,11 @@
       <artifactId>commons-lang3</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.duracloud.db</groupId>
+      <artifactId>account-management-db-model</artifactId>
+    </dependency>
+
   </dependencies>
 
 </project>
