--- a/security/pom.xml
+++ b/security/pom.xml
@@ -67,7 +67,6 @@
       <version>${project.version}</version>
     </dependency>
 
-
     <dependency>
       <groupId>org.duracloud</groupId>
       <artifactId>snapshotdata</artifactId>
@@ -78,6 +77,16 @@
       <groupId>org.duracloud</groupId>
       <artifactId>common-cache</artifactId>
       <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.duracloud.db</groupId>
+      <artifactId>account-management-db-repo</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.duracloud.db</groupId>
+      <artifactId>account-management-db-model</artifactId>
     </dependency>
 
     <dependency>
