--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -117,6 +117,11 @@
     </dependency>
 
     <dependency>
+      <groupId>org.duracloud.db</groupId>
+      <artifactId>account-management-db-model</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <scope>test</scope>
