--- a/storageprovider/pom.xml
+++ b/storageprovider/pom.xml
@@ -28,6 +28,11 @@
     </dependency>
 
     <dependency>
+      <groupId>org.duracloud.db</groupId>
+      <artifactId>account-management-db-model</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.jdom</groupId>
       <artifactId>jdom</artifactId>
     </dependency>
